fix layout issues for very small screens

--- a/tich/css/main.css
+++ b/tich/css/main.css
@@ -45,7 +45,7 @@ nav {
 }
 
 .thumbnail {
-	padding: 40px;
+	padding: 25px;
 }
 
 #booksFirstRow {
